refactor: extract utils, ditch giant state, bundle deps
- Extract util.ts, ui.ts, state.ts, map.ts modules; remove PeerDeps bag and GeoCallbacks interface
- Add PeerView type separating display concern (isSelf) from LocationData
- Consolidate map variables into mapState object
- Replace innerHTML string-building in renderPeerCards with DOM creation
- Validate beacon code charset before join attempt
- Remove dead getCurrentHeading() export
- Extract shared initPeer()/enterBeacon() to deduplicate createChannel/joinChannel
- Bundle PeerJS + Leaflet via npm imports; remove CDN script tags, allowUmdGlobalAccess, and most of globals.d.ts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.21",
     "esbuild": "^0.27.3",
-    "peerjs": "^1.5.5",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "leaflet": "^1.9.4",
+    "peerjs": "^1.5.5"
   }
 }
